# university-db

./: .gitignore  Address.hpp  CMakeLists.txt  CheckPesel.cpp  CheckPesel.hpp  Database.cpp  Database.hpp  DatabaseInterface.hpp  Gender.cpp  Gender.hpp  Menu.cpp  Menu.hpp  Person.cpp  Person.hpp  README.md  Student.cpp  Student.hpp  Tests.cpp  Worker.cpp  Worker.hpp  checkPesel.cpp  main.cpp
Commands/: AddStudent.cpp  AddStudent.hpp  ChangeIncome.cpp  ChangeIncome.hpp  Command.hpp  Commands.cpp  Commands.hpp  DeleteByIndexNumber.cpp  DeleteByIndexNumber.hpp  DeleteByPesel.cpp  DeleteByPesel.hpp  EndGame.cpp  EndGame.hpp  GenerateStudent.cpp  GenerateStudent.hpp  GenerateWorker.cpp  GenerateWorker.hpp  GeneratorData.hpp  LoadRecords.cpp  LoadRecords.hpp  PrintAllRecords.cpp  PrintAllRecords.hpp  PrintMenu.cpp  PrintMenu.hpp  SaveRecords.cpp  SaveRecords.hpp  SearchByPesel.cpp  SearchByPesel.hpp  SearchOption.cpp  SearchOption.hpp  SortByIncome.cpp  SortByIncome.hpp  SortByPesel.cpp  SortByPesel.hpp  SortBySurname.cpp  SortBySurname.hpp  ValidatePeselNumber.cpp  ValidatePeselNumber.hpp
